# LEARN-X

./: .ai-instructions  .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  ANALYTICS_SCHEMA.sql  API_INTEGRATION_TESTS.sh  AUTH_SYSTEM_TEST.js  BROKEN_DEPENDENCIES_REPORT.md  CI_CD_README.md  CODING_STANDARDS_AUDIT_REPORT.md  COURSE_FILES_STORAGE.sql  COURSE_SCHEMA.sql  EDGE_CASE_TESTS.sh  FILE_POSITION_FUNCTION.sql  FILE_PROCESSING_TEST.js  GAMIFICATION_PLAN.md  ONBOARDING_FIXES_SUMMARY.md  PERFORMANCE_TEST.sh  PERSONAS_MIGRATION.sql  PHASE3_SUMMARY.md  PRD.md  PROJECT_PLAN.md  README.md  REFACTORING_PLAN.md  SECURITY_TESTS.sh  STORAGE_BUCKETS.sql  SUPABASE_STORAGE.sql  SYSTEM_DESIGN.md  SYSTEM_HEALTH_VALIDATION_REPORT.md  TESLA_APPLE_IMPLEMENTATION.md  UI_UX_MOCKUPS.md  VALIDATION_SCRIPTS_SUMMARY.md  database-mismatch-report.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  fix-imports.sh  (+15 more)
.cursor/: mcp.json
.github/: dependabot.yml  pull_request_template.md
.husky/: pre-commit
backend/: .env.example  .env.health-check  .env.test  .npmrc  AI_MIGRATION_SUMMARY.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_E2E_TEST_IMPLEMENTATION_REPORT.md  DEPLOYMENT_CHECKLIST.md  DOCKER_FIX_GUIDE.md  Dockerfile  Dockerfile.dev  E2E_TEST_DOCUMENTATION.md  FINAL_CLEANUP_REPORT.json  INTEGRATION_TEST_REPORT.md  README.md  TEST_RESULTS.md  VECTOR_OPTIMIZATION_GUIDE.md  jest.config.js  (+18 more)
python-service/: .env.example  README.md  pyproject.toml
python-service/src/: __init__.py  config.py
python-service/src/core/: database.py  logger.py
(+931 files in other folders)
