[tool.poetry]
name = "learnx-ai-service"
version = "0.1.0"
description = "Python AI/ML service for LEARN-X platform"
authors = ["LEARN-X Team"]
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
redis = "^5.0.1"
httpx = "^0.26.0"
# Document processing
PyMuPDF = "^1.23.0"
python-docx = "^1.1.0"
pdfplumber = "^0.10.0"
# NLP and chunking
spacy = "^3.7.0"
nltk = "^3.8.0"
# AI/ML
openai = "^1.10.0"
numpy = "^1.26.0"
scikit-learn = "^1.4.0"
sentence-transformers = "^2.3.0"  # For local embeddings
# Utilities
python-multipart = "^0.0.6"
aiofiles = "^23.2.0"
tenacity = "^8.2.0"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
types-redis = "^4.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PT", "SIM"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"